cluster/apps/charts/it-tools/it-tools.yaml
--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
#  namespace: it-tools
spec:
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
        app.kubernetes.io/name: it-tools # required for Homepage
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: "500m"
              memory: "1000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: it-tools
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    gethomepage.dev/description: Handy online tools for developers
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Handy Tools
    gethomepage.dev/icon: it-tools-light
    gethomepage.dev/name: IT Tools
  name: it-tools
spec:
  rules:
    - host: it-tools.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: http-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - it-tools.rockyroad.rocks
      secretName: it-tools-tls
